# my-ARIAC-competition-2021

./: .gitignore  CMakeLists.txt  LICENSE  README.md  arm_coop_strategy  package.xml
config/: group1_config.yaml
config/trial_config/: flip_test.yaml  lecture8.yaml  rwa2_trial.yaml  rwa3_trial.yaml  rwa3_trial_1.yaml  rwa3_trial_1_no_sensor_blackout.yaml  rwa3_trial_3.yaml  rwa3_trial_all_faulty.yaml  rwa3_trial_insufficient.yaml  rwa4.yaml  task1_sensor_setup.yaml
config/trial_config/agv_test/: agv1.yaml  agv2.yaml  agv3.yaml  agv4.yaml
config/trial_config/assembly/: as2.yaml  as4.yaml
config/trial_config/belt/: battery.yaml  only_belt.yaml  pump.yaml  regulator.yaml  sensor.yaml  simple.yaml  trial_1.yaml  trial_2.yaml
config/trial_config/bins/: back_row.yaml  back_row_all_faulty.yaml
config/trial_config/flip/: half_flip.yaml  on_agv.yaml  sensor_blackout.yaml  simple.yaml  straight.yaml  wrong_yaw.yaml
config/trial_config/insufficient/: high_priority.yaml  multi.yaml  steal.yaml
config/trial_config/rwa3/: all_parts.yaml  done.yaml  half_done.yaml  rwa3_trial_2.yaml  trial_2.yaml  trial_4.yaml
config/trial_config/rwa4/: assembly.yaml  complete.yaml  complex.yaml  flip_test.yaml  kitting.yaml  test.yaml
config/trial_config/shipment/: all_wrong.yaml  part_task_done.yaml  redundant.yaml  swap.yaml  wrong_pose.yaml  wrong_type.yaml
config/user_config/: rwa2_sensor.yaml
doc/: instructions.txt
include/: .agv.h.swp  .sensors.h.swp  agv.h  arm.h  assembly_shipments.h  constants.h  factory_manager.h  gantry_arm.h  kitting_arm.h  order_info.h  order_manager.h  orders.h  sensor_manager.h  sensors.h  shipments.h  station.h  utility.h  utils.h
launch/: araic_testing.launch  ariac.launch  ariac_rviz.launch  ariac_testing.launch  arm_test.launch  arm_test2.launch  arms.launch  gantry_arm_test.launch  group1_rwa1.launch  kitting_arm.launch  kitting_arm_test.launch  rwa1.launch  rwa2.launch  rwa3.launch  rwa3_test.launch  rwa4.launch
msg/: Busy.msg  Database.msg  KittingInfo.msg  PartInfo.msg  PartTask.msg
script/: lecture8.sh  part_spawner.sh  part_spawner2.sh  part_spawner_rwa3.sh
src/: .agv.cpp.swp  .sensors.cpp.swp  .test_sensors.cpp.swp  agv.cpp  factory_manager.cpp  group1_rwa1.cpp  main.cpp  sensors.cpp  station.cpp  test_agv.cpp  test_sensors.cpp  test_station.cpp
src/lib/: \  agv.cpp  arm.cpp  assembly_shipments.cpp  factory_manager.cpp  gantry_arm.cpp  kitting_arm.cpp  order_manager.cpp  orders.cpp  sensor_manager.cpp  sensors.cpp  shipments.cpp  station.cpp  utility.cpp  utils.cpp
src/nodes/: agv_node.cpp  blackout.cpp  gantry_arm.cpp  group1_rwa1.cpp  kitting_arm.cpp  quality_checks.cpp  rwa1.cpp  rwa2.cpp  sensor_manager.cpp  sensors_node.cpp  station_node.cpp
src/test/: test_agv.cpp  test_arm.cpp  test_arm2.cpp  test_gantry_arm.cpp  test_kitting_arm.cpp  test_sensor_manager.cpp  test_station.cpp  test_utils.cpp
srv/: CheckQualitySensor.srv  GetBeltPart.srv  GetBeltProximitySensor.srv  GetCompetitionTime.srv  GetEmptyKittingAGV.srv  GetPartPosition.srv  GetParts.srv  GetShipmentPriority.srv  GetVacancyPose.srv  GetWorkingStation.srv  IsFaulty.srv  IsPartPicked.srv  IsShipmentReady.srv  PartsInCamera.srv  PartsUnderCamera.srv
